# photographic-indexer

./: .editorconfig  .env.init  .gitignore  .gitmodules  .scalafmt.conf  .tool-versions  CLAUDE.md  README.md  build.sbt  classpath  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-run.sh  package-lock.json
.claude/skills/release/: SKILL.md
.codex/skills/release/: SKILL.md
.github/workflows/: publish-clip-server.yml  publish-view.yml  release.yml  test.yml  view.yml
clip-server/: .dockerignore  .gitignore  .tool-versions  Dockerfile  README.md  clip_tensor.py  docker-compose.build.yml  download_model.sh  main.py  pyproject.toml  text_process.py  timer.py
clip-server/clip_server/: __init__.py  main.py
docker/db/conf/: japanese.cnf  sql_mode.cnf
docker/flyway/drivers/: download_mysql.sh
docker/flyway/sql/: V10__flickr_image.sql  V11__exif_cache.sql  V12__tag_name_not_empty.sql  V1__initial.sql  V2__thumbnail.sql  V3__fulltext_path.sql  V4__image_tag.sql  V5__public_image.sql  V6__public_image_index.sql  V7__image_note.sql  V8__long_shot_id.sql  V9__clip_index.sql
lb/: nginx.conf
project/: plugins.sbt
src/main/resources/: application.conf  application.conf.init
src/main/scala/: JettyLauncher.scala  ScalatraBootstrap.scala  StaticImage.scala
src/main/webapp/: _app  public  (+2 more)
view/: .dockerignore  .prettierrc  Dockerfile  docker-compose.build.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  svelte.config.js
view/src/: App.svelte  app.html  global.ts  hooks.server.ts  main.ts
(+109 files in other folders)
