[tool.poetry]
name = "clip-server"
version = "0.1.0"
description = ""
authors = ["ponkotuy <web@ponkotuy.com>"]
license = "Apache2"
readme = "README.md"
packages = [{include = "test_clip"}]

[tool.poetry.dependencies]
python = "^3.11"
japanese-clip = {git = "https://github.com/rinnakk/japanese-clip.git"}
torch = {url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.0.1%2Bcpu.cxx11.abi-cp311-cp311-linux_x86_64.whl"}
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
