[tool.poetry]
name = "clip-server"
version = "0.1.0"
description = ""
authors = ["ponkotuy <web@ponkotuy.com>"]
license = "Apache2"
readme = "README.md"
packages = [{include = "test_clip"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = {url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.0.1%2Bcpu.cxx11.abi-cp311-cp311-linux_x86_64.whl"}
transformers = "^4.40.0"
sentencepiece = "^0.2.0"
timm = "^1.0.0"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
